[package]
name = "jetbrains-fls-exporter"
version = "0.2.0"
authors = ["Robert Depke <github@satele.de>", "Michael Kreuzer <m-git@kreuzers.org>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
prometheus = "0.14"
warp = { version =  "0.4"  , features = ["server"]}
reqwest = {version = "0.12", features = ["json"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros"]}
flexi_logger = "0.31"
openssl = { version = "0.10", features = ["vendored"]}
